Fixes after code review